// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExternalLink matches snapshot 1`] = `
<a
  class="inline-flex items-center text-sm font-medium text-primary underline-offset-4 hover:underline"
  href="https://example.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Example Link
  <svg
    aria-hidden="true"
    class="ml-0.5 h-4 w-4"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.232 4.232a2.5 2.5 0 013.536 3.536l-1.225 1.224a.75.75 0 001.061 1.06l1.224-1.224a4 4 0 00-5.656-5.656l-3 3a4 4 0 00.225 5.865.75.75 0 00.977-1.138 2.5 2.5 0 01-.14-3.667l3-3z"
    />
    <path
      d="M11.603 7.963a.75.75 0 00-.977 1.138 2.5 2.5 0 01.14 3.667l-3 3a2.5 2.5 0 01-3.536-3.536l1.225-1.224a.75.75 0 00-1.061-1.06l-1.224 1.224a4 4 0 105.656 5.656l3-3a4 4 0 00-.225-5.865z"
    />
  </svg>
</a>
`;

exports[`ExternalLink matches snapshot without icon: without-icon 1`] = `
<a
  class="inline-flex items-center text-sm font-medium text-primary underline-offset-4 hover:underline"
  href="https://example.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Example Link
</a>
`;
